syntax = "proto3";
package BankAccounts.Workflows.TransferFunds;
option csharp_namespace = "BankAccounts.Workflows.TransferFunds";

message TransferFundsWorkflowInput {
	string from_account_id = 1;
	string to_account_id = 2;
	int64 amount = 3;
}